--- a/ASSIGNMENT_3.1.2.ipynb
+++ b/ASSIGNMENT_3.1.2.ipynb
@@ -18,8 +18,16 @@
    "source": [
     "# Problem 1.2: MyFilter function similar to filter function in python\n",
     "from functools import reduce\n",
+    "\n",
     "def my_filter(func, lst):\n",
+    "    '''\n",
+    "    my_filter function that filters the list based on the function\n",
+    "    INPUT: func - The Function\n",
+    "            lst = List on which the func needs to be applied\n",
+    "    OUTPUT: Filtered list\n",
+    "    '''\n",
     "    output=[]\n",
+    "    #Check if the list provided is having >2 values to apply the filter\n",
     "    if(len(lst) < 2):\n",
     "        return 'Please provide list with more than one value'\n",
     "    else:\n",
