--- a/ASSIGNMENT_3.1.1.ipynb
+++ b/ASSIGNMENT_3.1.1.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Output from reduce Function: 8806025134080\n",
+      "\n",
       "Output from my_reduce Function: 8806025134080\n"
      ]
     }
@@ -20,6 +22,13 @@
     "import math\n",
     "\n",
     "def my_reduce(func,lst):\n",
+    "    '''\n",
+    "     my_reduce function that reduced the list based on the function\n",
+    "     INPUT: func - The Function\n",
+    "            lst = List on which the func needs to be applied\n",
+    "     OUTPUT: reduced list\n",
+    "     '''\n",
+    "     #Check if the list provided is having >2 values to apply the reduce function\n",
     "    if(len(lst) < 2):\n",
     "        return 'Please provide list with more than one value'\n",
     "    else:\n",
@@ -30,9 +39,16 @@
     "\n",
     "a=[1,2,3,4,4,5]\n",
     "\n",
-    "print('Output from reduce Function: %d' %(reduce(lambda x,y:x**2*y,a)))\n",
-    "print('Output from my_reduce Function: %d' %(my_reduce(lambda x,y:x**2*y,a)))"
+    "print('\\nOutput from reduce Function: %d' %(reduce(lambda x,y:x**2*y,a)))\n",
+    "print('\\nOutput from my_reduce Function: %d' %(my_reduce(lambda x,y:x**2*y,a)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
